diesel_compile_tests/tests/fail/belongs_to_second_parent.stderr
error: expected `=`
  --> $DIR/belongs_to_second_parent.rs:29:29
   |
29 | #[diesel(belongs_to(Bar, Baz))]
   |                             ^

error: warnings
  --> $DIR/belongs_to_second_parent.rs:37:5
   |
37 |     compile_error!("warnings");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
